# ezexif

./: .gitignore  LICENSE  README.md  build_full.ps1  build_lite.ps1  pyproject.toml
ezexif/: ezexif.py  icon_data.py
