[project]
name = "ezexif"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clipboard>=0.0.4",
    "pillow>=11.3.0",
    "pyinstaller>=6.16.0",
    "tkinterdnd2>=0.4.3",
    "geopy>=2.4.1",
    "transformers>=4.43.0",
    "torch>=2.3.0; platform_system == 'Windows'",
]
